// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog > renders a 'dialog' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_3_"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet on bottom' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_i_"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet on the left' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_9_"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet on the left' 2`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_c_"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet on top' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_f_"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a 'sheet' 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_6_"
    aria-expanded="true"
    aria-haspopup="dialog"
    data-state="open"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > renders a dialog trigger 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_0_"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;

exports[`Dialog > should open and close dialog 1`] = `
<DocumentFragment>
  <button
    aria-controls="radix-_r_l_"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Edit Profile
  </button>
</DocumentFragment>
`;
